fix score printing. Fix key. Fix db for every thread